# Wagent

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
config/: selectors.yaml  settings.yaml
examples/: quickstart.py  simple_agent.py
src/wagent/: __init__.py
wagent/: __init__.py  browser.py  client.py  config.py  main.py  schemas.py  server.py
